--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-sortable-tree": "^2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
